Fix reflection warning